--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GeorgianCollege/COMP2068-MongoDemo"
+    "url": "https://github.com/shwetachavda/comp2068-lab5.git"
   },
   "author": "lenovo",
   "description": "lab5 using mongodb",
