--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "mongoose": "^4.4.4",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0"
   },
   "engines": {
